feat: added database module and tests, finished openapi specification
